# websocket-ide

./: Cargo.toml  LICENSE  README.md
src/: config.json  main.rs  server.rs
src/file_system/: directory_manager.rs  document_manager.rs  event_batcher.rs  file_event.rs  mod.rs  watcher_manager.rs
src/lsp/: capabilities.rs  lsp_manager.rs  lsp_server.rs  mod.rs  types.rs
src/search/: mod.rs  search_manager.rs  types.rs
src/terminal/: mod.rs  terminal_manager.rs  terminal_server.rs  types.rs
src/utils/: path_utils.rs
