[package]
name = "server-ide"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
notify = "6.1.1"
memmap2 = "0.9.5"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
lsp-types = "0.97.0"
clap = { version = "4.2", features = ["derive"] }
futures = "0.3.31"
similar = "2.4.0"  
url = "2.4"
tempfile = "3.14.0"
portable-pty = "0.8.1"
uuid = { version = "1.11.0", features = ["v4"] }
nucleo = "0.5"
walkdir = "2.4"
ignore = "0.4.23"
